# wikid

./: .gitignore  Dockerfile  PROJECT.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
data/: zim
examples/: tool_chat_template_llama3.2_pythonic.jinja  tool_chat_template_mistral.jinja
frontend/: index.html
qwen_server/: __init__.py  client.py  server.py  tool_client.py  tools.py  web_server.py
qwen_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
wikid_server/: __init__.py  server.py  tool_client.py  zim_tools.py
