[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen-server"
version = "0.1.0"
description = "Simple vLLM server for Qwen3-8B-FP8 model"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "vllm>=0.10.0",
    "openai>=1.87.0,<=1.90.0",
    "fastapi",
    "uvicorn",
]

[project.scripts]
qwen-server = "qwen_server.server:main"
qwen-client = "qwen_server.client:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["qwen_server*"]

[tool.uv]
dev-dependencies = []
