[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wikid-server"
version = "0.1.0"
description = "Offline research assistant with ZIM knowledge bases and vLLM inference"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "vllm>=0.10.0",
    "openai>=1.87.0,<=1.90.0",
    "fastapi",
    "uvicorn",
    "rich",
    "libzim",
    "markdownify",
]

[project.scripts]
wikid-server = "wikid_server.server:main"
wikid-chat = "wikid_server.tool_client:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["wikid_server*"]

[tool.uv]
dev-dependencies = []
